# opencl-mandelbrot

./: CMakeLists.txt  README.md  assert_cl.cc  assert_cl.hpp  main.cc  mandelbrot.cl  svgpng.hpp  test.cl
